@@ -813,14 +813,13 @@ CHANNELS=\
 # appropriate security flag when they log in.
 # Including "EXPIRE=X" in the mask, with no spaces, will cause entries more 
 # than X days old to be automatically purged from the journal.
-# Including "SCRIPT=[filename]" in the mask, and in quotes, will cause the 
-# given mobprog script (see Scripting guide) to be executed, with the results
-# appended to the journal.
+# Including "SCRIPT=[filename]" in the mask will cause the given mobprog script 
+# (see Scripting guide) to be executed, with the results appended to the journal.
 # Security flags are automatically defined for each COMMANDJOURNAL.  Players
 # with a security flag whose name is the same as the COMMANDCHANNEL will be
 # able to list and destroy items from the journal.
 COMMANDJOURNALS=\
-	BUG "SCRIPT=progs/bugreport.script",\
+	BUG CONFIRM SCRIPT=progs/bugreport.script,\
 	TYPO ADDROOM,\
 	IDEA,\
 	TASK,\
